# clj

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  publish.yml  python.yml
clj/: __init__.py  fns.py  seqs.py
cljseqs/: __init__.py
tests/: base.py  test.py  test_fns.py  test_seqs.py  test_version.py
