[tool.poetry]
name = "clj"
version = "0.4.0"
description = "Utilities for lazy iterables"
authors = ["Baptiste Fontaine <b@ptistefontaine.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bfontaine/clj"
homepage = "https://github.com/bfontaine/clj"
include = ["clj/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^1"
twine = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
