[tool.poetry]
name = "clj"
version = "0.4.0"
description = "Utilities for lazy iterables"
authors = ["Baptiste Fontaine <b@ptistefontaine.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bfontaine/clj"
homepage = "https://github.com/bfontaine/clj"
include = ["clj/py.typed"]
classifiers = [
    'License :: OSI Approved :: MIT License',
    "Development Status :: 5 - Production/Stable",
    'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^1"
twine = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
mypy = "^1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
