[tool.poetry]
name = "clj"
version = "0.5.0"
description = "Utilities for lazy iterables"
authors = ["Baptiste Fontaine <b@ptistefontaine.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bfontaine/clj"
homepage = "https://github.com/bfontaine/clj"
keywords = ["clj", "clojure", "lazy", "iterables", "generators"]
include = ["clj/py.typed"]
classifiers = [
    'License :: OSI Approved :: MIT License',
    "Development Status :: 5 - Production/Stable",
    'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1"
pytest = "^8.3"
pytest-cov = "^6.0"
twine = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
